--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -7,8 +7,6 @@
   <title>SparrowHood</title>
 </head>
 <body>
-  <div id="root">
-
-  </div>
+  <main id='root'>SparrowHood</main>
 </body>
 </html>
