--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <link href="//db.onlinewebfonts.com/c/cab3e909a9de32e7e39645e54fc81941?family=FF+DIN" rel="stylesheet" type="text/css"/>
   </head>
 
   <body>
