--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -17,20 +17,24 @@
   font-size: 13px;
 }
 
-
-.green-feather {
-  margin: auto;
-  width: 64px;
-  height: 64px;
-}
-
-input[type=text], input[type=password] {
-  width: 225px;
-  height: 34px;
+.login-input {
+  width: 282px;
+  height: 36px;
 }
 
 .link  {
   text-decoration: underline;
   font-weight: bolder;
   color: #000000;
+  cursor: pointer;
+}
+
+.login-button {
+  color: white;
+  background-color: black;
+  width: 132px;
+  height: 48px;
+  // padding: 0 48px;
+  border-radius: 5px;
+  cursor: pointer;
 }
