update signup sidebar text

--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -3,7 +3,7 @@
   font-family: 'Signika Negative', sans-serif;
   display: flex;
 }
-.login-img, .form, .name-input, .signup-sidebar {
+.login-img, .form, .name-.signup-form, .signup-sidebar {
   flex: 1;
 }
 
