--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -1,10 +1,14 @@
+
 .login,  .signup{
   font-family: 'Roboto', sans-serif;
   font-family: 'Signika Negative', sans-serif;
   display: flex;
-  width: 100%;
+  height: 100vh;
 }
 .login-img, .form, .name-.signup-form, .signup-sidebar {
+  flex: 1 1 50%;
+  height: 100%;
+  width: 100%;
 }
 
 .login-title {
@@ -12,8 +16,8 @@
 }
 
 .login-img {
-  height: 100%;
-  width:100%;
+  object-fit: cover;
+  overflow: hidden;
 }
 
 .login-form {
