--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Signika+Negative&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/43e238e94a.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
