--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -2,8 +2,11 @@ div {
   box-sizing: border-box;
 }
 .login,  .signup{
-  font-family: 'Roboto', sans-serif;
-  font-family: 'Signika Negative', sans-serif;
+//   font-family: 'Roboto', sans-serif;
+// font-family: 'Signika Negative', sans-serif;
+// font-family: Arial, Helvetica, sans-serif;
+  font-family: 'AvenirLTStd-Book';
+  src: url('app/assets/fonts/avenir_ff/AvenirLTStd-Book.otf');
   display: flex;
   height: 100vh;
 }
@@ -44,12 +47,19 @@ div {
   margin: 0 0 8px;
   border: 1px solid lightgray;
 }
+input[type=text]:focus, input[type=password]:focus {
+  outline: none;
+}
+input[type=text]:focus .input-box {
+  border: 1px solid blue;
+}
 
 .login-input {
   height: 100%;
   border: none;
   padding: 0;
   background-color: transparent;
+  border: none;
 }
 
 .link  {
