--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -1,12 +1,16 @@
 div {
   box-sizing: border-box;
 }
-.login,  .signup{
-//   font-family: 'Roboto', sans-serif;
-// font-family: 'Signika Negative', sans-serif;
-// font-family: Arial, Helvetica, sans-serif;
+@font-face {
   font-family: 'AvenirLTStd-Book';
-  src: url('app/assets/fonts/avenir_ff/AvenirLTStd-Book.otf');
+  src: url('../fonts/avenir_ff/AvenirLTStd-Book.otf');
+}
+
+.login,  .signup{
+  font-family: 'Roboto', sans-serif;
+  // font-family: Arial, Helvetica, sans-serif;
+  // font-family: 'Signika Negative', sans-serif;
+  font-family: 'AvenirLTStd-Book';
   display: flex;
   height: 100vh;
 }
