--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -10,12 +10,38 @@ div {
   font-family: 'Roboto', sans-serif;
   // font-family: Arial, Helvetica, sans-serif;
   // font-family: 'Signika Negative', sans-serif;
-  font-family: 'AvenirLTStd-Book';
+  // font-family: 'AvenirLTStd-Book';
   display: flex;
   height: 100vh;
 }
-.login-img, .form, .name-.signup-form, .signup-sidebar {
+
+.login-img, .form {
   flex: 1 1 50%;
+}
+
+.left-signup {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  padding: 0 15%;
+
+}
+
+.right-signup {
+  width: 40%;
+  background-color: rgb(245,248,250);
+  padding: 174px 4% 0px;
+}
+
+.header {
+  font-size: 24px;
+}
+
+.title-left {
+  margin-top: 161px;
+  font-weight: bold;
+  font-size: 24px;
+
 }
 
 .login-title {
@@ -44,13 +70,20 @@ div {
   line-height: 20px
 }
 
-.input-box {
+
+.input-box, .name-input input {
   width: 282px;
   height: 36px;
   padding: 0 12px;
   margin: 0 0 8px;
   border: 1px solid lightgray;
+  border-radius: 5px;
 }
+
+ .name-input input {
+  width: 100px;
+  margin-right: 20px;
+ }
 
 input[type=text]:focus, input[type=password]:focus {
   outline: none;
@@ -98,7 +131,7 @@ input[type=text]:focus .input-box {
   background-color: rgba(242,242,242,1);
 }
 
-.forgot:hover {
+.forgot:hover, .green {
   color: rgba(0,180,5,1);
 }
 
@@ -108,4 +141,24 @@ input[type=text]:focus .input-box {
 
 .create-acc {
   margin: 25px 0 0;
+}
+
+.signup-form {
+  width: 80%;
+}
+
+.disclaimer {
+  color: rgb(180, 189, 194);
+  font-size: 12.75px;;
+}
+
+.subheading {
+  margin: 40px 0px 8px;
+  font-weight: bolder;
+}
+
+.errors-list {
+  color: rgb(255,80,0);
+  list-style-type: disc;
+  list-style-position: inside;
 }
