--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -11,6 +11,12 @@ div {
   height: 100vh;
 }
 
+@media (max-width: 700px){
+  .login-img {
+    display: none;
+  }
+}
+
 .login-img, .form {
   flex: 1 1 50%;
 }
