--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -35,12 +35,47 @@ a {
   padding: 10px 20px;
   border-radius: 20px;
   text-align: center;
+  width: max-content;
 }
 
 .signup-button {
   background-color: black;
   color: white;
-  width: 8%;
+}
+.dropdown {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  position: absolute;
+  right: 0;
+  top: 5%;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+}
+
+.dropdown li {
+  border: 1px grey solid;
+  padding: 10px;
+}
+.show {
+  display: none;
+}
+@media (max-width: 900px){
+  nav {
+    justify-content: space-between;
+    padding: 0 10px;
+  }
+  .hide-nav {
+    display: none;
+  }
+  .show {
+    display: inline;
+  }
+  .dropdown {
+    // display: flex;
+  }
 }
 
 .banner h1 {
@@ -101,5 +136,4 @@ a {
   .left-banner {
     width: calc(41.667% - 18px);
   }
-
 }
