--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -4,12 +4,16 @@
 }
 
 nav {
+  position: sticky;
+  top: 0;
   display: flex;
   justify-content: space-around;
   align-items: center;
   border-bottom: 1px solid grey;
   height: 50px;
   color: black;
+  z-index: 5;
+  background-color: white;;
 }
 .nav-home {
   font-size: 20px;
@@ -24,10 +28,10 @@ a {
   cursor: pointer;
 }
 
-.nav-login-link {
+.nav-link {
   margin-right: 15px;
 }
-.nav-login-link:hover {
+.nav-link:hover {
   color: rgba(0,180,5,1);
 }
 .nav-signup-link, .signup-button {
@@ -45,22 +49,36 @@ a {
 .dropdown {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
   position: absolute;
   right: 0;
-  top: 5%;
-  z-index: 100;
+  top: 51px;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: white;
+  padding-top: 20px;
 }
 
-.dropdown li {
-  border: 1px grey solid;
-  padding: 10px;
+.sublist-item {
+  padding: 20px 30px;
+  margin: auto;
+  width: 75%;
 }
-.show {
+
+.sublist {
+  background-color: rgb(239, 239, 239);
+  width: 80%;
+  margin: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 10px 20px;
+}
+
+.show, .toggle-list {
   display: none;
+}
+.flex {
+  display: flex;
+  justify-content: space-between;
 }
 @media (max-width: 900px){
   nav {
@@ -72,9 +90,6 @@ a {
   }
   .show {
     display: inline;
-  }
-  .dropdown {
-    // display: flex;
   }
 }
 
