--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -47,7 +47,7 @@ a {
   color: white;
 }
 .dropdown {
-  display: flex;
+  display: none;
   flex-direction: column;
   position: absolute;
   right: 0;
