--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -152,3 +152,18 @@ a {
     width: calc(41.667% - 18px);
   }
 }
+
+.underline {
+  text-decoration: underline;
+}
+
+.fee {
+  text-align: center;
+  padding: 45px;
+  border-top: 1px black solid;
+  border-bottom: 1px black solid;
+}
+
+#feather {
+  height: 1em;
+}
