--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -165,7 +165,7 @@ a {
 }
 
 #feather {
-  height: 1em;
+  height: 2em;
 }
 
 footer {
@@ -182,7 +182,7 @@ footer li {
   margin: 0 10px;
 }
 
-.whiteText li a, .whiteText li Link {
+.whiteText li a, .whiteText li Link, .whiteText {
   color: white;
 }
 #icon-links {
