--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Signika+Negative&display=swap" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/43e238e94a.js" crossorigin="anonymous"></script>
-    # <script type='text/javascript'> window.greenFeatherImg = "<%= image_url('green-feather.png') %>"; </script>
-    # <script type='text/javascript'> window.loginImg = "<%= image_url('login-side.jpeg') %>"; </script>
-    # <script type='text/javascript'> window.splashPhoneImg= "<%= image_url('splash-phone.png') %>"; </script>
-    # <script type='text/javascript'> window.splashVideo = "<%= asset_url('splash-video.mp4') %>"; </script>
+    <script type='text/javascript'> window.greenFeatherImg = "<%= image_url('green-feather.png') %>"; </script>
+    <script type='text/javascript'> window.loginImg = "<%= image_url('login-side.jpeg') %>"; </script>
+    <script type='text/javascript'> window.splashPhoneImg= "<%= image_url('splash-phone.png') %>"; </script>
+    <script type='text/javascript'> window.splashVideo = "<%= asset_url('splash-video.mp4') %>"; </script>
 
   </head>
 
