--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,10 @@
   </head>
 
   <body>
+    <script type='text/javascript'>  window.greenFeatherImg = "<%= image_url('green-feather.png') %>";  </script>
+    <script type='text/javascript'>  window.loginImg = "<%= image_url('login-side.jpeg') %>"; </script>
+    <script type='text/javascript'>  window.splashPhoneImg= "<%= image_url('splash-phone.png') %>";</script>
+    <script type='text/javascript'>  window.splashVideo = "<%= asset_url('splash-video.mp4') %>";</script>
     <%= yield %>
   </body>
 </html>
