--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,8 @@
     <script src="https://kit.fontawesome.com/43e238e94a.js" crossorigin="anonymous"></script>
 
     <script type='text/javascript'>  window.greenFeatherImg = "<%= image_url('green-feather.png') %>";  </script>
-
+    <script type='text/javascript'>  window.loginImg = "<%= image_url('login-side.jpeg') %>"; </script>
+   
   </head>
 
   <body>
