update graph label s

--- a/app/assets/stylesheets/portfolio.scss
+++ b/app/assets/stylesheets/portfolio.scss
@@ -11,6 +11,11 @@
   margin: 5%;
 }
 
+.graph {
+  border-bottom: 1px solid gray;
+  margin-bottom: 20px;
+}
+
 .chartOptions span{
-  padding-right: 30px;
+  padding-right: 15px;
 }
