--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,11 +14,12 @@
 
     <script src="https://kit.fontawesome.com/43e238e94a.js" crossorigin="anonymous"></script>
 
-    <script type='text/javascript'>  window.greenFeatherImg = "<%= image_url('green-feather.png') %>";  </script>
-    <script type='text/javascript'>  window.loginImg = "<%= image_url('login-side.svg') %>";  </script>
-     <script type='text/javascript'>  window.splashPhoneImg= "<%= image_url('splash-phone.png') %>";</script>
-    <script type='text/javascript'>  window.splashVideo = "<%= asset_url('splash-video.mp4') %>";</script>
-
+    <script type='text/javascript'>  
+      window.greenFeatherImg = "<%= image_url('green-feather.png') %>";  
+      window.loginImg = "<%= image_url('login-side.png') %>";
+      window.splashPhoneImg= "<%= image_url('splash-phone.png') %>";
+      window.splashVideo = "<%= asset_url('splash-video.mp4') %>";
+    </script>
    <script type="text/javascript">
       window.alphaAPIKey = "<%= Rails.application.credentials.alpha[:api_key] %>"
   </script>
