--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -13,7 +13,7 @@ nav {
   height: 50px;
   color: black;
   z-index: 5;
-  background-color: white;;
+  background-color: white;
 }
 .nav-home {
   font-size: 20px;
