--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
     <script src="https://kit.fontawesome.com/43e238e94a.js" crossorigin="anonymous"></script>
 
-  
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
    <script type="text/javascript">
       window.alphaAPIKey = "<%= Rails.application.credentials.alpha[:api_key] %>"
@@ -26,5 +26,42 @@
     
     
     <%= yield %>
+    <div>
+    <canvas id="myChart"></canvas>
+  </div>
+  <script>
+  const labels = [
+    'January',
+    'February',
+    'March',
+    'April',
+    'May',
+    'June',
+  ];
+
+  const data = {
+    labels: labels,
+    datasets: [{
+      label: 'My First dataset',
+      backgroundColor: 'rgb(255, 99, 132)',
+      borderColor: 'rgb(255, 99, 132)',
+      data: [0, 10, 5, 2, 20, 30, 45],
+    }]
+  };
+
+  const config = {
+    type: 'line',
+    data: data,
+    options: {}
+  };
+</script>
+<script>
+  const myChart = new Chart(
+    document.getElementById('myChart'),
+    config
+  );
+</script>
+ 
+ 
   </body>
 </html>
