--- a/app/assets/stylesheets/portfolio.scss
+++ b/app/assets/stylesheets/portfolio.scss
@@ -5,6 +5,7 @@
 
 .portfolio-splash {
   height: 100vh;
+  width: 100%;
 }
 
 .portfolio {
@@ -31,11 +32,13 @@
  width: 275px;
  max-height: 550px;
  margin-left: 50px;
+ background-color: #1E2124;
 }
 .asset-list p {
   box-sizing: border-box;
   padding: 20px;
   border-bottom: 1px solid grey;
+  border-top: 1px solid grey;
   width: 100%;
 }
 
