update chart total display

--- a/app/assets/stylesheets/portfolio.scss
+++ b/app/assets/stylesheets/portfolio.scss
@@ -52,6 +52,10 @@
   border-bottom: 1px solid gray;
 }
 
-#myChart {
-  z-index: 10;
-} 
+#currentTotal {
+  font-size: 32px;
+}
+
+#interval {
+  color: #919FA6
+}
