--- a/app/assets/stylesheets/portfolio.scss
+++ b/app/assets/stylesheets/portfolio.scss
@@ -30,7 +30,6 @@
 }
 
 .buying-power {
-  // border-top: 1px solid gray;
   border-bottom: 1px solid gray;
 }
 
@@ -57,7 +56,7 @@
   margin-top: 20px;
   background-color: rgb(30,33,36);
   border-radius: 5px;
-  padding: 20px;
+  padding: 0 20px 20px 20px;
 }
 
 .deposit-button {
