--- a/app/assets/stylesheets/portfolio.scss
+++ b/app/assets/stylesheets/portfolio.scss
@@ -57,6 +57,7 @@
   background-color: rgb(30,33,36);
   border-radius: 5px;
   padding: 0 20px 20px 20px;
+  font-size: 15px;
 }
 
 .deposit-button {
@@ -66,5 +67,6 @@
   height: 45px;
   font-weight: bold;
   border-radius: 5px;
+  border: none;
 }
 
