update mini chart

--- a/app/assets/stylesheets/add_funds_form.scss
+++ b/app/assets/stylesheets/add_funds_form.scss
@@ -1,6 +1,8 @@
 .funds-modal {
   background-color: black;
+  position: sticky;
   height: 100%;
+  width: 100%;
 }
 .add-funds-form-div {
   display: flex;
