--- a/app/assets/stylesheets/asset_list_item.scss
+++ b/app/assets/stylesheets/asset_list_item.scss
@@ -30,3 +30,10 @@
 .negative {
   color: #FF5000;
 }
+
+.miniChartDiv {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
