--- a/app/assets/stylesheets/portfolio.scss
+++ b/app/assets/stylesheets/portfolio.scss
@@ -11,6 +11,7 @@
 .portfolio {
   background-color: black;
   display: flex;
+  justify-content: space-evenly;
   width: 100%;
   height: 100%;
   padding: 5%;
