update asset show page

--- a/app/assets/stylesheets/portfolio-chart.scss
+++ b/app/assets/stylesheets/portfolio-chart.scss
@@ -33,7 +33,7 @@
 .greenText.active-filter {
   color: #00C805;
   padding-bottom: 10px;
-  border-bottom: 1px solid #00C805;;
+  border-bottom: 1px solid #00C805;
 }
 
 .redText.active-filter {
