--- a/app/assets/stylesheets/portfolio.scss
+++ b/app/assets/stylesheets/portfolio.scss
@@ -8,7 +8,7 @@
   height: 100%;
 }
 
-.portfolio {
+.portfolio, .asset-show-body {
   background-color: black;
   display: flex;
   justify-content: space-evenly;
