--- a/app/assets/stylesheets/asset_show.scss
+++ b/app/assets/stylesheets/asset_show.scss
@@ -43,3 +43,53 @@
 .about-body, .stats-body{
   margin-bottom: 50px;
 }
+
+.asset-list.transaction-form-container {
+  height: auto;
+}
+
+.transaction-form {
+  padding: 20px;
+  font-size: 13px;
+}
+
+.transaction-form .flex-between {
+  padding: 20px 0;
+}
+
+.transaction-button {
+  width: 100%;
+  height: 50px;
+  border-radius: 5px;;
+}
+
+.transaction-options {
+  display: flex;
+  border-bottom: 1px solid gray;
+}
+
+#buy-option {
+  padding: 0 5px;
+}
+
+#transaction-unit-input, #unit-value, .unit-value-input {
+  box-sizing: border-box;
+  width: 80px;
+  height: 35px;
+  background-color: #30363A;
+  border: none;
+  border-radius: 5px;
+  text-align: right;
+  padding: 0 12px;
+  color: white;
+}
+
+#unit-value {
+  width: 100px;
+  text-align: left;
+  
+}
+
+#transaction-unit-input:focus, #unit-value:focus {
+  border: 1px solid green;
+}
