--- a/app/assets/stylesheets/asset_show.scss
+++ b/app/assets/stylesheets/asset_show.scss
@@ -44,35 +44,48 @@
   margin-bottom: 50px;
 }
 
-.asset-list.transaction-form-container {
-  height: auto;
-}
-
 .transaction-form {
-  padding: 20px;
+  border: 1px solid grey;
+  width: 275px;
+  height: auto;
+  margin-left: 50px;
+  background-color: #1E2124;
+  border-radius: 5px;
   font-size: 13px;
 }
 
-.transaction-form .flex-between {
+.transaction-form-selections {
+  display: flex;
+  justify-content: space-between;
   padding: 20px 0;
 }
 
 .transaction-button {
   width: 100%;
   height: 50px;
-  border-radius: 5px;;
+  border-radius: 5px;
+  padding:15px 20px 20px 20px;
+  vertical-align: center;
+  border: none;
 }
 
 .transaction-options {
   display: flex;
   border-bottom: 1px solid gray;
+  padding: 0 20px;
+  cursor: pointer;
 }
 
-#buy-option {
-  padding: 0 5px;
+#buy-option, #sell-option {
+  padding: 15px 5px;
+  height: 100%;
 }
 
-#transaction-unit-input, #unit-value, .unit-value-input {
+#buy-option:hover, #sell-option:hover {
+  color: green;
+}
+
+#transaction-unit-input {
   box-sizing: border-box;
   width: 80px;
   height: 35px;
@@ -86,10 +99,32 @@
 
 #unit-value {
   width: 100px;
-  text-align: left;
-  
+  // text-align: left;
+  box-sizing: border-box;
+  height: 35px;
+  background-color: #30363A;
+  border: none;
+  border-radius: 5px;
+  padding: 0 12px;
+  color: white;
 }
 
-#transaction-unit-input:focus, #unit-value:focus {
+#transaction-unit-input:focus, #unit-value:focus, #unit-value:enabled {
   border: 1px solid green;
+}
+
+.transaction-form-body {
+  border-bottom: 1px solid gray;
+  margin: 0 20px;
+}
+
+.transaction-confirmation {
+  padding: 0 20px 20px 20px;
+  border-bottom: 1px solid gray;
+}
+
+.transaction-form-buy-power {
+  padding: 20px;
+  text-align: center;
+  color: green;
 }
