--- a/app/assets/stylesheets/asset_show.scss
+++ b/app/assets/stylesheets/asset_show.scss
@@ -120,12 +120,14 @@
 
 .transaction-confirmation {
   width: 100%;
-  padding: 0 20px 20px 20px;
-  border-bottom: 1px solid gray;
+  padding-bottom: 20px;
+  
 }
 
 .transaction-form-buy-power {
   padding: 20px;
   text-align: center;
   color: green;
+  width: 100%;
+  border-top: 1px solid gray;
 }
