--- a/app/assets/stylesheets/asset_show.scss
+++ b/app/assets/stylesheets/asset_show.scss
@@ -67,6 +67,7 @@
   padding:15px 20px 20px 20px;
   vertical-align: center;
   border: none;
+  cursor: pointer;
 }
 
 .transaction-options {
@@ -127,12 +128,19 @@
   border-top: 1px solid gray;
 }
 
-.transaction-form-buy-power.greenText {
+.transaction-form-buy-power.greenText, .transaction-form-buy-power.green {
   color: #00C805;
 }
-.transaction-form-buy-power.redText {
+.transaction-form-buy-power.redText, .transaction-form-buy-power.red {
   color: red;
 }
+.transaction-button.green {
+  background-color: #00C805;
+}
+.transaction-button.green {
+  background-color: red;
+}
+
 .transaction-button.greenText {
   background-color: #00C805;
 }
@@ -153,3 +161,4 @@
   color: red;
   border-bottom: 1px solid red;
 }
+
