update asset show

--- a/app/assets/stylesheets/asset_show.scss
+++ b/app/assets/stylesheets/asset_show.scss
@@ -44,6 +44,9 @@
   margin-bottom: 50px;
 }
 
+.chart-name {
+  font-size: 32px;
+}
 .transaction-form {
   border: 1px solid grey;
   width: 275px;
