update format values

--- a/app/assets/stylesheets/asset_show.scss
+++ b/app/assets/stylesheets/asset_show.scss
@@ -110,6 +110,9 @@
   color: white;
 }
 
+.value-subtitle {
+  font-size: 21px;
+}
 
 #transaction-unit-input:focus, #unit-value:focus, #unit-value:enabled {
   border: 1px solid green;
