update sort and table for watchlist show

--- a/app/assets/stylesheets/loading_spinner.scss
+++ b/app/assets/stylesheets/loading_spinner.scss
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 #spinner {
@@ -19,4 +20,8 @@
 @keyframes spin {
   0%{transform: rotate(0deg);}
   100%{transform: rotate(360deg);}
+}
+
+.loading-error {
+  color:white;
 }
