--- a/app/assets/stylesheets/watchlist_show.scss
+++ b/app/assets/stylesheets/watchlist_show.scss
@@ -6,11 +6,40 @@
   font-size: 13px;
 }
 
+.watchlist-body, .delete-question {
+  display: flex;
+  justify-content: space-between;
+}
+
 .watchlist-main {
-  width: 60%;
+  width: 700px;
   margin: 30px;
 }
+
+.watchlist-aside {
+  border: 1px solid grey;
+  min-width: 275px;
+  max-height: 550px;
+  margin: 40px 50px;
+  background-color: #1E2124;
+  border-radius: 5px;
+}
+
+.watchlist-aside-title {
+  font-size: 15px;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  border-bottom: 1px solid gray;
+}
+
 .watchlist-icon {
+}
+
+
+
+.watchlist-sort-options {
+  font-size: 18px;
 }
 
 .watchlist-header {
@@ -19,28 +48,140 @@
   padding: 20px 0;
 }
 
-.watchlist-table-name {
+.watchlist-table-title {
   font-size: 24px;
+  width: 80%;
 }
 
-.grayText, th  {
+.watchlist-table-name {
+  background-color: transparent;
+  border-radius: 5px;
+  padding: 5px;
+  color: white;
+  font-size: 24px;
+  border: none;
+  width: 100%;
+}
+
+.watchlist-table-name:focus {
+  background-color: #1E2124;
+  border: 1px solid #ECD0F2;
+}
+.watchlist-table-count{
+  padding-left: 5px;
+  font-size: 13px;
+}
+
+.watchlist-table-count, th  {
   color: #919FA6;
+}
+table {
+  width: 100%;
 }
 
 table, th, td {
   border-bottom: 1px solid gray;
-  padding: 20px 40px 20px 0;
+  padding: 15px 15px 15px 0;
   text-align: left;
 }
 
-.watchlist-name-col {
-  padding-right: 250px;
+th, .filter-icon {
+  cursor: pointer;
+}
+
+th:hover, .filter-icon:hover {
+  color: #00C805;
+}
+
+.sort-caret {
+  float: right;
+  display: inline-block;
+}
+
+.watchlist-sort-columns {
+  min-width: 70px;
+}
+.watchlist-name-col  {
+  min-width: 250px;
+}
+
+.watchlist-cap-col {
+  min-width: 80px;
+}
+
+.fa-filter {
+  padding-right: 10px;
+  cursor: pointer;
 }
 
 .caret {
   width: 0;
   height: 0;
   border: 5px solid transparent;
-  display: inline;
-  border-top-color: white;
+  display: inline-block;
+}
+
+.caret.up {
+  border-bottom-color: #00C805;
+}
+
+.caret.down {
+  border-top-color: #FF5000;
+}
+
+.sort, .reverse {
+  color: #00C805;
+  border-bottom: 1px solid #00C805;
+}
+.fa-angle-down, .fa-angle-up {
+  color: #00C805;
+}
+
+.delete-watchlist-asset, .close-delete {
+  cursor: pointer;
+  font-size: 20px;
+  padding-right: 0;
+}
+
+.confirm-delete-div {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(11, 13, 18, 0.5);
+  display: flex;
+  justify-content: center;
+  padding-top: 20%;
+  z-index: 10;
+}
+
+.confirm-delete {
+  width: 400px;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding: 20px;
+  border-radius: 5px;
+  background-color: #1E2124;
+  
+}
+
+.delete-question {
+  font-size: 18px;
+  line-height: 1.5;
+}
+.delete-button {
+  width: 80%;
+  height: 50px;
+  margin: 0 auto;
+  background-color: rgb(255,80,0);
+  border-radius: 5px;
+}
+
+.delete-button:hover {
+  background-color: rgba(255,106,38,1);
+}
+
+.hidden{
+  display:none
 }
